@@ -7,7 +7,7 @@ heart_beat_interval=30
 stat_report_interval=60
 base_path=/home/yuqing/fastdfs
 sync_wait_msec=200
-max_connections=1024
+max_connections=256
 
 # tracker_server can ocur more than once, and tracker_server format is
 #  "host:port", host can be hostname or ip address
