@@ -40,12 +40,9 @@ int main(int argc, char *argv[])
 {
 	char *conf_filename;
 	char bind_addr[FDFS_IPADDR_SIZE];
-	pthread_attr_t thread_attr;
-	int incomesock;
-	
 	int result;
 	int sock;
-	pthread_t tid;
+	pthread_t *tids;
 	struct sigaction act;
 	
 	if (argc < 2)
@@ -83,10 +80,6 @@ int main(int argc, char *argv[])
 	}
 	
 	g_tracker_thread_count = 0;
-	if ((result=init_pthread_attr(&thread_attr)) != 0)
-	{
-		return result;
-	}
 
 	memset(&act, 0, sizeof(act));
 	sigemptyset(&act.sa_mask);
@@ -130,96 +123,40 @@ int main(int argc, char *argv[])
 		return errno;
 	}
 
-	while (g_continue_flag)
+	tids = (pthread_t *)malloc(sizeof(pthread_t) * g_max_connections);
+	if (tids == NULL)
 	{
-		/*
-		if (bReloadFlag)
-		{			
-			if (!retrieveConfInfo())
-			{
-				break;
-			}
-			
-			bReloadFlag = false;
-		}
-		*/
-	
-		incomesock = nbaccept(sock, 1 * 60, &result);
-		if(incomesock < 0) //error
-		{
-			if (result == ETIMEDOUT || result == EINTR || \
-				result == EAGAIN)
-			{
-				continue;
-			}
-			
-			if(result == EBADF)
-			{
-				logError("file: "__FILE__", line: %d, " \
-					"accept failed, " \
-					"errno: %d, error info: %s", \
-					__LINE__, result, strerror(result));
-				break;
-			}
-			
-			logError("file: "__FILE__", line: %d, " \
-				"accept failed, errno: %d, error info: %s", \
-				__LINE__, result, strerror(result));
-			continue;
-		}
-		
-		if (pthread_mutex_lock(&g_tracker_thread_lock) != 0)
-		{
-			logError("file: "__FILE__", line: %d, " \
-				"call pthread_mutex_lock fail, " \
-				"errno: %d, error info:%s.", \
-				__LINE__, errno, strerror(errno));
-		}
-		if (g_tracker_thread_count >= g_max_connections)
-		{
-			logError("file: "__FILE__", line: %d, " \
-				"create thread failed, " \
-				"current thread count %d exceed the limit %d", \
-				__LINE__, g_tracker_thread_count + 1, g_max_connections);
-			close(incomesock);
-		}
-		else
-		{
-			result = pthread_create(&tid, &thread_attr, \
-				tracker_thread_entrance, (void*)incomesock);
-			if(result != 0)
-			{
-				logError("file: "__FILE__", line: %d, " \
-					"create thread failed, " \
-					"errno: %d, error info: %s", \
-					__LINE__, errno, strerror(errno));
-				close(incomesock);
-			}
-			else
-			{
-				g_tracker_thread_count++;
-			}
-		}
-		if (pthread_mutex_unlock(&g_tracker_thread_lock) != 0)
-		{
-			logError("file: "__FILE__", line: %d, " \
-				"call pthread_mutex_unlock fail, " \
-				"errno: %d, error info: %s", \
-				__LINE__, errno, strerror(errno));
-		}
+		logError("file: "__FILE__", line: %d, " \
+			"malloc fail, errno: %d, error info: %s", \
+			__LINE__, errno, strerror(errno));
+		return errno;
 	}
 
+	g_tracker_thread_count = g_max_connections;
+	if ((result=create_work_threads(&g_tracker_thread_count, \
+		tracker_thread_entrance, (void *)sock, tids)) != 0)
+	{
+		free(tids);
+		return result;
+	}
+
+	while (g_continue_flag)
+	{
+		sleep(1);
+	}
+
+	kill_work_threads(tids, g_max_connections);
 	while (g_tracker_thread_count != 0)
 	{
 		sleep(1);
 	}
 	
-	//gc_destroy();
 	tracker_mem_destroy();
 
-	pthread_attr_destroy(&thread_attr);
 	pthread_mutex_destroy(&g_tracker_thread_lock);
 	
+	free(tids);
+
 	logInfo("exit nomally.\n");
 	
 	return 0;
